<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvGroupName"
            style="@style/TextAppearance.AppCompat.Title"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_group_title"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvContactsInGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/tvGroupAlarmSchedule"
                android:text="@string/text_group_total_contacts"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:drawableStart="@drawable/ic_group_generic_24dp"
                android:drawablePadding="10dp"
                android:gravity="start"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

            <TextView
                android:id="@+id/tvGroupAlarmSchedule"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_alignParentEnd="true"
                android:drawableStart="@drawable/ic_schedule_generic_24dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/text_group_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvGroupRecentlyVisitedRestaurant"
            android:layout_marginTop="8dp"
            android:text="@string/text_group_recently_visited_restaurant"
            style="@style/TextAppearance.AppCompat.Caption"
            android:drawableStart="@drawable/ic_restaurant_generic_24dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnGroupUpdate"
                android:layout_alignParentEnd="true"
                android:text="@string/text_group_update"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>